# jpdb-connect

./: Cargo.toml  Changelog.md  License.md  Readme.md  flake.nix
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
src/: anki_connect.rs  default_config.toml  jpdb.rs  main.rs  parsing.rs
