[package]
name = "jpdb_connect"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
open = "2.1.2"
anyhow = "1.0.57"
reqwest = { version = "0.11.10", features = ["cookies"] }
tower = {version = "0.4.13", features = ["limit", "util", "buffer", "make"]}
toml = "0.5.9"
chumsky = {version= "0.8.0", default_features = false}
serde_urlencoded = "0.7.1"
