[package]
name = "jpdb_connect"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
erased-serde = "0.3"
open = "2.1.2"
anyhow = { version = "1.0", features = ["backtrace"] }
reqwest = { version = "0.11.10", features = ["cookies"] }
tower = {version = "0.4.13", features = ["limit", "util", "buffer", "make"]}
toml = "0.5.9"
chumsky = {version= "0.8.0", default_features = false}
serde_urlencoded = "0.7.1"
log = {version = "0.4", features = ["serde"]}
fern = "0.6.1"
chrono = "0.4"